--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "badwords-filter",
-  "version": "1.3.0",
+  "name": "@sergiyiva/badwords-filter",
+  "version": "1.4.2",
   "description": "An easy to use badwords filter with advanced detection and anti-workaround",
-  "main": "index.js",
+  "main": "index.min.js",
   "types": "index.d.ts",
+  "files": [
+    "index.d.ts"
+  ],
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "build": "rollup index.js --name badwords_filter --output.format esm | terser --compress --mangle -o index.min.js",
+    "size": "gzip -c index.min.js | wc -c && echo 'bytes' # Only for Unix",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/3chospirits/badwords-filter.git"
+    "url": "git+https://github.com/SergiyIva/badwords-filter.git"
   },
   "keywords": [
     "badwords",
@@ -26,8 +32,8 @@
   ],
   "author": "3chospirits",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/3chospirits/badwords-filter/issues"
-  },
-  "homepage": "https://github.com/3chospirits/badwords-filter#readme"
+  "devDependencies": {
+    "rollup": "^3.20.2",
+    "terser": "^5.16.9"
+  }
 }
